apps/petclinic/actor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actor-server
spec:
  selector:
    matchLabels:
      app: actor-server
  template:
    metadata:
      labels:
        app: actor-server
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: petclinic-actor
        dapr.io/app-port: "3000"
        dapr.io/enable-metrics: "true"
        dapr.io/config: "tracing"
        dapr.io/log-level: "debug"
        dapr.io/sidecar-listen-addresses: 0.0.0.0,[::]        
    spec:
      containers:
      - name: actor-server
        image: ghcr.io/spolab/petclinic-actor:latest@sha256:82358eeebaa382f78d49acb4b06453685b2d009c6b09a3db8223e9a300b6d0a4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
