apps/petclinic/owner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owner
  namespace: petclinic
spec:
  selector:
    matchLabels:
      app: owner
  template:
    metadata:
      labels:
        app: owner
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: owner
        dapr.io/app-port: "3000"
        dapr.io/log-level: debug
    spec:
      containers:
      - name: petclinic-owner
        image: spolab/petclinic-owner:v0.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: rest
          containerPort: 3000
