apps/petclinic/vet.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vet-api
spec:
  selector:
    matchLabels:
      app: vet-api
  template:
    metadata:
      labels:
        app: vet-api
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: petclinic-vet
        dapr.io/app-port: "3000"
        dapr.io/enable-metrics: "true"
        dapr.io/config: "tracing"
        dapr.io/log-level: "debug"
    spec:
      containers:
      - name: vet-api
        image: ghcr.io/spolab/petclinic-vet-api:latest@sha256:61e086b05b141b856c7364516909762dfce00ab691d396de2144cd8cfa99fd45
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
